--- a/package.json
+++ b/package.json
@@ -53,6 +53,12 @@
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
     "traverse": "^0.6.6",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.7.4",
+    "normalize.css": "^4.1.1",
+    "bitters": "git://github.com/thoughtbot/bitters.git#95cd30aa56ffd75f3cee9966df08f0f0c896498c"
+  },
+  "dependencies": {
   }
 }
